# pronapp

./: .gitignore  README.md  buildozer.spec  main.py  pyproject.toml
.buildozer/: state.db
.buildozer/android/app/: main.py
.buildozer/android/app/data/: sauce.json
.buildozer/android/app/pronapp/: utils.py
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/myapp/: AndroidManifest.xml  build.xml  dist_info.json  local.properties
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/myapp/src/main/: AndroidManifest.xml
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/myapp/src/main/assets/: private.tar
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/myapp/src/main/java/org/libsdl/app/: SDLActivity.java
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/myapp/src/main/res/values/: strings.xml
data/: checkpoint.json
pronapp/: app.py  utils.py
