[tool.poetry]
name = "pronapp"
version = "0.1.0"
description = "App for randomized pron experience"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

# Update buildozer.spec accordingly for deploy
[tool.poetry.dependencies]
python = "^3.9"
Kivy = "2.1.0"
kivymd = "1.1.1"
Cython = "^0.29.32"
lightrun = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
